ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab-ingress
  namespace: gitlab
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100m
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - gitlab.dominio.com.br
    secretName: gitlab-tls
  rules:
  - host: gitlab.dominio.com.br
    http:
      paths:
      - path: /
        backend:
          serviceName: gitlab-service
          servicePort: 80
